:recycle: code review

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -310,7 +310,7 @@ const hreflangLinks = Object.entries(languageUrls).map(([langCode, data]) => ({
   </div>
 </div>
 
-<script>
+<script is:inline type="module">
   import './header/script.ts';
 </script>
 
